Deal with file: URIs.